--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 
 *.java linguist-detectable=true
 *.java linguist-language=java
+
+*.java linguist-detectable=true
+*.java linguist-language=sparql
